AC_INIT(rnetclient,2014.0,softwares-impostos@fsfla.org)
AC_CONFIG_AUX_DIR(build-aux)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME,AC_PACKAGE_VERSION)
AC_PROG_CC
AC_PROG_INSTALL
PKG_CHECK_MODULES(GNUTLS, gnutls >= 1.4.0, , AC_MSG_ERROR(Could not find gnutls))
AM_PATH_LIBGCRYPT(,,AC_MSG_ERROR(Could not find gcrypt))
LIBS="$LIBGCRYPT_LIBS $GNUTLS_LIBS $LIBS -lz"
CFLAGS="$LIBGCRYPT_CFLAGS $GNUTLS_CFLAGS $CFLAGS"
AC_CONFIG_HEADERS([config.h])
AC_OUTPUT(Makefile)
